# Beethoven

./: .gitignore  LICENSE  MEMORY.md  PRD.md  README.md  package-lock.json  package.json  pyproject.toml
desktop/: app.js  index.html  styles.css
docs/: ARCHITECTURE.md  DESKTOP_PACKAGING.md  PRODUCT_INTERFACE.md  RECURSIVEMAS.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/beethoven/: __init__.py  cli.py  conductor.py  config.py  core.py  desktop_server.py  desktop_state.py  events.py  orchestrator.py  packaging.py  patching.py  planning.py  recursive.py  routing.py  runtime.py  serialization.py  soloists.py  solomlx.py  validation.py  workspace.py
tests/: conftest.py  test_cli.py  test_conductor.py  test_desktop_server.py  test_openai_compatible.py  test_patching.py  test_planning.py  test_recursive.py  test_solomlx.py  test_validation.py  test_workspace.py
