[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beethoven-ai"
version = "0.1.0"
description = "Universal orchestration platform for AI models, agents, tools, and workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "ROSITO" }
]
keywords = ["ai", "agents", "orchestration", "llm", "automation"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.scripts]
beethoven = "beethoven.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/beethoven"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
